fix on overlapping styles

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -399,7 +399,7 @@ header{
 /* -LOGIN- */
 
 /* Full-width input fields */
-input[type=text],input[type=password] {
+logi input[type=text],logi input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -409,7 +409,7 @@ input[type=text],input[type=password] {
 }
 
 /* Set a style for all buttons */
- .logi {
+ logi button{
   background-color: #0466C8;
   color: white;
   padding: 14px 20px;
@@ -419,40 +419,40 @@ input[type=text],input[type=password] {
   width: 100%;
 }
 
-button:hover {
+logi button:hover {
   opacity: 0.8;
 }
 
 /* Extra styles for the cancel button */
-.cancelbtn {
+logi .cancelbtn {
   width: auto;
   padding: 10px 18px;
   background-color: #f44336;
 }
 
 /* Center the image and position the close button */
-.imgcontainer {
+logi .imgcontainer {
   text-align: center;
   margin: 24px 0 12px 0;
   position: relative;
 }
 
-img.avatar {
+logi img.avatar {
   width: 20%;
   border-radius: 50%;
 }
 
-.container {
+logi .container {
   padding: 16px;
 }
 
-span.psw {
+logi span.psw {
   float: right;
   padding-top: 16px;
 }
 
 /* The Modal (background) */
-.modal {
+logi .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -467,7 +467,7 @@ span.psw {
 }
 
 /* Modal Content/Box */
-.modal-content {
+logi .modal-content {
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
@@ -475,7 +475,7 @@ span.psw {
 }
 
 /* The Close Button (x) */
-.close {
+logi .close {
   position: absolute;
   right: 25px;
   top: 0;
@@ -484,14 +484,14 @@ span.psw {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+logi .close:hover,
+logi .close:focus {
   color: red;
   cursor: pointer;
 }
 
 /* Add Zoom Animation */
-.animate {
+logi .animate {
   -webkit-animation: animatezoom 0.6s;
   animation: animatezoom 0.6s
 }
@@ -508,13 +508,15 @@ span.psw {
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
-  span.psw {
+  logi span.psw {
      display: block;
      float: none;
   }
-  .cancelbtn {
+  logi .cancelbtn {
      width: 100%;
   }
+
+/* -FIN LOGIN- */
 
 .reg{
   padding: 20px;
